added Payment Form

--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
 
         <a href="https://www.google.com/"> Google</a>
         <br>
+
+
+        
         <a href="https://www.github.com">GitHub</a>
+        <br>
+        <a href="./Hello.html"> Open Hello.html</a>
+        <br>
+        <img src="./image/img1.jpg" alt="Random Image" height="150" width="150">
+        <br>
+        <b>Bold</b>
+        <br>
+        <i>Italic</i>
+        <br>
+        <u>underline</u>
+        <br>
+        <br>
+        <br>
+        <big>this tag shows big text</big>
+        <br>
+        <small>this tag shows small text</small>
+
     </body>
 </html>
