--- a/payment_form.html
+++ b/payment_form.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment Form</title>
     <!-- <link rel="stylesheet" href="style2.css" /> -->
-    <link rel="stylesheet" href="style3.css" />
+    <!-- <link rel="stylesheet" href="style3.css" /> -->
+    <link rel="stylesheet" href="style4.css" />
   </head>
   <body>
     <form action="">
